--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample Website</title>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-28ZQQT87V4"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4BVWG1Q304"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-28ZQQT87V4');
+  gtag('config', 'G-4BVWG1Q304');
 </script>
    </head>
 <body>
